--- a/requirements.txt
+++ b/requirements.txt
@@ -46,3 +46,9 @@ tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
 yarl==1.20.1
+python-dotenv
+pydantic
+pandas
+numpy
+requests
+# add your actual runtime deps here (exchanges, TG, etc.)
