--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,35 +2,28 @@ name: CI
 
 on:
   push:
-    branches: [ main, ci-setup ]
+    branches: ["main"]
   pull_request:
-    branches: [ main ]
+    branches: ["main"]
 
 jobs:
-  build-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-          cache: 'pip'
-
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
 
       - name: Install dependencies
         run: |
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          # tools (only if not pinned in requirements.txt)
-          pip install ruff black mypy pytest
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Lint (ruff)
-        run: ruff --format=github .
+        run: ruff check .
 
       - name: Format check (black)
         run: black --check .
