--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# === Runtime deps (Python 3.10 compatible) ===
 aiodns==3.5.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
@@ -9,7 +10,7 @@ ccxt==4.5.2
 certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.3
-click==8.2.1
+click==8.2.1              # 3.10+ OK
 cryptography==45.0.6
 distro==1.9.0
 fastapi==0.116.1
@@ -22,9 +23,9 @@ Jinja2==3.1.6
 jiter==0.10.0
 MarkupSafe==3.0.2
 multidict==6.6.4
-numpy==1.26.4
+numpy==1.26.4             # 3.10-compatible (numpy 2.x needs 3.11+)
 openai==1.102.0
-pandas==2.3.2
+pandas==2.3.2             # works with numpy 1.26.x on 3.10
 propcache==0.3.2
 pycares==4.10.0
 pycparser==2.22
@@ -38,7 +39,7 @@ requests==2.32.5
 setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
-starlette==0.47.3
+starlette==0.47.3         # matches your current pin; OK with your app
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
@@ -46,9 +47,9 @@ tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
 yarl==1.20.1
-python-dotenv
-pydantic
-pandas
-numpy
-requests
-# add your actual runtime deps here (exchanges, TG, etc.)
+
+# === Dev/CI tools (used by GitHub Actions) ===
+ruff==0.6.9               # supports 3.10; use `ruff check .` in CI
+black==24.8.0             # 3.8+
+mypy==1.10.0              # 3.8+
+pytest==8.3.3             # 3.8+
