--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,28 @@
 [tool.black]
 line-length = 100
-target-version = ["py39"]
+target-version = ["py310"]
 
 [tool.ruff]
+target-version = "py310"
 line-length = 100
-select = ["E","F","I","UP","B"]
-ignore = ["E203"]  # black compat
-exclude = ["venv",".venv","build","dist"]
+fix = true
+
+[tool.ruff.lint]
+select = ["E", "F", "I"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["app"]
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.10"
 ignore_missing_imports = true
 warn_unused_ignores = true
-strict = false
+warn_redundant_casts = true
+no_implicit_optional = true
+follow_imports = "silent"
+
+[project.optional-dependencies]
+dev = [
+  "mypy",
+  "types-requests",
+]
