checked in .env file removing from gitignore

--- a/.env
+++ b/.env
@@ -63,14 +63,14 @@ MAX_SL_PCT=0.0130                    # 1.20% cap
 
 # TP behaviour
 
-TP_MODE=atr                           # atr | r
+TP_MODE=r                             # atr | r
 TP1_ATR_MULT=0.50
 TP2_ATR_MULT=1.00
 TP3_ATR_MULT=1.50
-TP_R_MULTIS=0.4,0.8,1.4               # used if TP_MODE=r
+TP_R_MULTIS=0.6,1.6,2.6               # used if TP_MODE=r
 
 # --- Mode-adaptive TP sizing (auto chop vs rally)
-MODE_ADAPT_ENABLED=true
+MODE_ADAPT_ENABLED=false
 MODE_CHOP_ATR_PCT_MAX=0.0025      # 0.25% of price
 MODE_CHOP_ADX_MAX=25              # ADX(14,5m) <= 25 => chop
 MODE_CHOP_TP_ATR_MULTS=0.60,1.00,1.50
@@ -92,7 +92,7 @@ TP_HIT_CONFIRM_BARS=0
 TS_CHECK_POS_EVERY_S=10
 
 # --- Locking after TP hits (used by surveillance)
-TP_LOCK_STYLE=trail_fracR             # trail_fracR | to_tp1
+TP_LOCK_STYLE=to_tp1                  # trail_fracR | to_tp1
 TP_LOCK_CONFIRM_BARS=0                # consecutive 1m closes beyond TP before locking
 TP_CONFIRM_USE_CLOSED_ONLY=true
 TP1_LOCK_FRACR=0.25
@@ -169,12 +169,12 @@ MIN_REENTRY_SECONDS=120
 BLOCK_REENTRY_PCT=0.0010
 REQUIRE_NEW_BAR=true
 PLACE_TP3_LIMIT=true
-DYNAMIC_TP_EXTEND=true
+DYNAMIC_TP_EXTEND=false
 
 # =========================
 # FLIP / PROFIT-DECAY EXIT (no duplicates)
 # =========================
-FLIP_ENABLED=true
+FLIP_ENABLED=false
 FLIP_MIN_HOLD_SEC=240             # don’t evaluate PDE/flip before 4m
 FLIP_MIN_PEAK_R=0.30              # need ≥0.60R peak before PDE triggers
 FLIP_DECAY_FRAC=0.50              # exit if currentR ≤ 50% of peakR
@@ -186,7 +186,7 @@ FLIP_MAX_PER_TRADE=2              # at most 1 flip per original trade
 # =========================
 # Dynamic Avoid
 # =========================
-DYN_AVOID_ENABLED=true
+DYN_AVOID_ENABLED=false
 AVOID_LOOKBACK_BARS=120
 CHOP_MIN_FLIPS=14
 CHOP_MAX_WIDTH_PCT=0.0050
@@ -195,7 +195,7 @@ CONF_MAX_SPREAD_PCT=0.0050
 # =========================
 # FLOW-AWARE MANAGEMENT (NEW)
 # =========================
-FLOW_ENABLED=true                    # master toggle for dynamic SL/TP
+FLOW_ENABLED=false                   # master toggle for dynamic SL/TP
 FLOW_BE_AT_R_PCT=0.60  # TS_OPT_2025-09-12: lock BE sooner (~0.5R or TP1)
 FLOW_TP2_R_MULT=1.6                  # post‑TP1 re‑spacing for TP2 (in R)
 FLOW_TP3_R_MULT=2.6                  # post‑TP1 re‑spacing for TP3 (in R)
@@ -228,7 +228,7 @@ TS_USE_ADX_FILTER=false
 
 # -- Explicit filter toggles (allow enabling/disabling RSI & Regime independently)
 TS_USE_RSI_FILTER=false
-TS_USE_REGIME_FILTER=true
+TS_USE_REGIME_FILTER=false
 
 # ===== EMA/SMA filters (kept OFF to mirror your charts by default) =====
 TS_EMA_FILTER=false
@@ -261,7 +261,7 @@ TS_STOP_MODE=trendline               # trendline | struct
 # ===== TrendScalp Milestone Trailing (NEW) =====
 # Milestone-based SL flow: fewer micro-tightens, larger winners.
 # Set false to instantly revert to previous FSM SL behaviour.
-TS_MILESTONE_MODE=true
+TS_MILESTONE_MODE=false
 
 # After TP1, raise SL only on milestones: every +0.5R of further progress
 # increases the SL base by +0.25R from entry. Tighten-only still enforced.
@@ -277,9 +277,9 @@ TS_EXIT_USE_CLOSE=true
 TS_EXIT_CONFIRM_BARS=2
 TS_VOL_FLOOR_PCT=0.0015         # 0.15% ATR floor (relaxed to match SOL stride)
 TS_ADX_MIN=24
-TS_ADX_SOFT=20
-TS_OVERRIDE_EMA_RSI=true
-TS_TL_WIDTH_ATR_MULT=0.70   
+TS_ADX_SOFT=22
+TS_OVERRIDE_EMA_RSI=false
+TS_TL_WIDTH_ATR_MULT=0.50   
 # --- Adaptive regime (TrendScalp) [added 2025-09-10 08:45 IST]
 TS_ADAPT_REGIME=false
 TS_ADAPT_ADX1=30
