--- a/.env
+++ b/.env
@@ -43,7 +43,7 @@ ATR_NEAR_MULT=0.60
 VWAP_RECLAIM_ATR_MULT=0.5
 AVWAP_RECLAIM_ATR_MULT=0.6
 AGGRESSION=aggressive                   # conservative | balanced | aggressive
-PERSIST_BARS=2
+PERSIST_BARS=1
 MIN_R_MULT=1.4
 
 # =========================
@@ -51,8 +51,8 @@ MIN_R_MULT=1.4
 # =========================
 # Blended stop distance: d = SL_MIX_ALPHA*(SL_ATR_MULT*ATR_5m) + (1-SL_MIX_ALPHA)*(SL_NOISE_MULT*noise_1m)
 SL_MIX_ALPHA=0.60
-SL_ATR_MULT=1.25
-SL_NOISE_MULT=2.50
+SL_ATR_MULT=0.90
+SL_NOISE_MULT=2.10
 SL_NOISE_BARS_1M=10
 
 
@@ -67,10 +67,10 @@ TP_MODE=r                             # atr | r
 TP1_ATR_MULT=0.50
 TP2_ATR_MULT=1.00
 TP3_ATR_MULT=1.50
-TP_R_MULTIS=0.6,1.6,2.6               # used if TP_MODE=r
+TP_R_MULTIS=0.5,1.2,2.0               # used if TP_MODE=r
 
 # --- Mode-adaptive TP sizing (auto chop vs rally)
-MODE_ADAPT_ENABLED=false
+MODE_ADAPT_ENABLED=true
 MODE_CHOP_ATR_PCT_MAX=0.0025      # 0.25% of price
 MODE_CHOP_ADX_MAX=25              # ADX(14,5m) <= 25 => chop
 MODE_CHOP_TP_ATR_MULTS=0.60,1.00,1.50
@@ -88,7 +88,7 @@ MANAGE_POLL_SECONDS=2
 FAST_SCAN_AFTER_TP1=1
 STATUS_INTERVAL_SECONDS=60
 
-TP_HIT_CONFIRM_BARS=0
+TP_HIT_CONFIRM_BARS=1
 TS_CHECK_POS_EVERY_S=10
 
 # --- Locking after TP hits (used by surveillance)
@@ -103,7 +103,7 @@ TP_LOCK_GRACE_SEC=20                   # seconds grace after entry before first 
 BE_BUFFER_PCT=0.0015                  # fallback cushion if legacy mode used
 
 RATCHET_MIN_R=0.60
-RATCHET_GRACE_SEC=240
+RATCHET_GRACE_SEC=150
 
 # --- Legacy lock modes (safe fallback)
 TP1_LOCK_MODE=breakeven_buffer        # tp1_exact | tp1_buffer | breakeven_buffer
@@ -154,7 +154,7 @@ SCALP_ABS_LOCK_USD=0.20  # pre-TP1 safety tighten
 # =========================
 # SCHEDULER / AUDIT
 # =========================
-SCAN_INTERVAL_SECONDS=60
+SCAN_INTERVAL_SECONDS=30
 OPENAI_USE=false
 OPENAI_API_KEY=YOUR_OPENAI_KEY
 AUDIT_DEBOUNCE_SECONDS=20
@@ -166,7 +166,7 @@ AUDIT_MAX_LEVELS=10
 # EXECUTION HYGIENE
 # =========================
 MIN_REENTRY_SECONDS=120
-BLOCK_REENTRY_PCT=0.0010
+BLOCK_REENTRY_PCT=0.0015
 REQUIRE_NEW_BAR=true
 PLACE_TP3_LIMIT=true
 DYNAMIC_TP_EXTEND=false
@@ -186,7 +186,7 @@ FLIP_MAX_PER_TRADE=2              # at most 1 flip per original trade
 # =========================
 # Dynamic Avoid
 # =========================
-DYN_AVOID_ENABLED=false
+DYN_AVOID_ENABLED=true
 AVOID_LOOKBACK_BARS=120
 CHOP_MIN_FLIPS=14
 CHOP_MAX_WIDTH_PCT=0.0050
@@ -195,7 +195,7 @@ CONF_MAX_SPREAD_PCT=0.0050
 # =========================
 # FLOW-AWARE MANAGEMENT (NEW)
 # =========================
-FLOW_ENABLED=false                   # master toggle for dynamic SL/TP
+FLOW_ENABLED=true                    # master toggle for dynamic SL/TP
 FLOW_BE_AT_R_PCT=0.60  # TS_OPT_2025-09-12: lock BE sooner (~0.5R or TP1)
 FLOW_TP2_R_MULT=1.6                  # post‑TP1 re‑spacing for TP2 (in R)
 FLOW_TP3_R_MULT=2.6                  # post‑TP1 re‑spacing for TP3 (in R)
@@ -224,15 +224,16 @@ TS_NEIGHBORS=8
 TS_MAX_BACK=2000
 TS_FEATURE_COUNT=5
 TS_USE_VOL_FILTER=true
-TS_USE_ADX_FILTER=false
+TS_USE_ADX_FILTER=true
 
 # -- Explicit filter toggles (allow enabling/disabling RSI & Regime independently)
-TS_USE_RSI_FILTER=false
+TS_USE_RSI_FILTER=true
 TS_USE_REGIME_FILTER=false
 
 # ===== EMA/SMA filters (kept OFF to mirror your charts by default) =====
-TS_EMA_FILTER=false
+TS_EMA_FILTER=true
 TS_EMA_PERIOD=200
+EMA_TOL_PCT=0.0015
 TS_SMA_FILTER=false
 TS_SMA_PERIOD=200
 
@@ -252,21 +253,24 @@ TS_TL_SHOW_EXT=true
 
 # ===== Entry/Exit behavior =====
 TS_REQUIRE_BOTH=false                # relaxed: ML bias OR structure can trigger (ADX governs strictness)
-TS_PULLBACK_PCT=0.0018   # 0.35% to EMA-fast (note: 0.0035 = 0.35%, your comment “0.60%” on 0.003 is incorrect)
-TS_WAI_MIN=0.50          # relax momentum gate
-TS_COOLDOWN_BARS=4
+TS_PULLBACK_PCT=0.0015   # 0.35% to EMA-fast (note: 0.0035 = 0.35%, your comment “0.60%” on 0.003 is incorrect)
+TS_WAI_MIN=0.42          # relax momentum gate
+TS_COOLDOWN_BARS=2
 TS_TP_R=0.5,1.0,1.8
 TS_STOP_MODE=trendline               # trendline | struct
+TS_AVOID_CHASE_ATR_BAR=1.2
+TS_NO_SHORT_IF_RSI_LT=37
+TS_NO_LONG_IF_RSI_GT=63
 
 # ===== TrendScalp Milestone Trailing (NEW) =====
 # Milestone-based SL flow: fewer micro-tightens, larger winners.
 # Set false to instantly revert to previous FSM SL behaviour.
-TS_MILESTONE_MODE=false
+TS_MILESTONE_MODE=true
 
 # After TP1, raise SL only on milestones: every +0.5R of further progress
 # increases the SL base by +0.25R from entry. Tighten-only still enforced.
-TS_MS_STEP_R=0.8
-TS_MS_LOCK_DELTA_R=0.20
+TS_MS_STEP_R=0.5
+TS_MS_LOCK_DELTA_R=0.25
 
 # On TP2, jump SL to 70% of entry→TP2 distance, then trail by ATR (0.50×ATR)
 TS_TP2_LOCK_FRACR=0.70
@@ -276,8 +280,9 @@ TS_POST_TP2_ATR_MULT=0.50
 TS_EXIT_USE_CLOSE=true
 TS_EXIT_CONFIRM_BARS=2
 TS_VOL_FLOOR_PCT=0.0015         # 0.15% ATR floor (relaxed to match SOL stride)
-TS_ADX_MIN=24
-TS_ADX_SOFT=22
+TS_ADX_MIN=22
+TS_ADX_SOFT=20
+TS_ADX_SLOPE_BONUS=3.0
 TS_OVERRIDE_EMA_RSI=false
 TS_TL_WIDTH_ATR_MULT=0.50   
 # --- Adaptive regime (TrendScalp) [added 2025-09-10 08:45 IST]
@@ -302,6 +307,34 @@ TS_REVERSAL_ADX_MIN=22
 TS_SL_MIN_STEP_ATR=0.05
 TS_SL_MIN_BUFFER_ATR=0.25
 
+# ===== Regime (Chop vs Runner) =====
+# Classify market each 5m bar using ADX & ATR% with hysteresis. Drives exit style.
+TS_REGIME_AUTO=true
+TS_ADX_UP=26.0         # upgrade to RUNNER when ADX >= 26 and ATR% confirms
+TS_ADX_DN=23.0         # degrade to CHOP when ADX <= 23 or ATR% degrades
+TS_ATR_UP=0.0040       # 0.40% of price (ATR(14)/price)
+TS_ATR_DN=0.0035       # 0.35% of price
+TS_PARTIAL_TP1=0.50    # in RUNNER: take 50% at TP1
+TS_EXIT_ON_TP1=false   # hard override: always exit full at TP1 (testing only)
+PREPLACE_TP1_PARTIAL=false  # if true, pre-place a reduce-only TP1 partial at entry
+
+# ===== Post-Entry Validity Guard (PEV) — pre‑TP1 only =====
+# Ensures reasons-for-entry still hold before TP1. Exits early on hard invalidation,
+# or waits a small grace on soft degrade. Uses same ADX/ATR bands as Regime.
+PEV_ENABLED=true
+PEV_GRACE_BARS_5M=2
+PEV_GRACE_MIN_S=300
+PEV_USE_1M_CONFIRM=true
+PEV_CONFIRM_1M_BARS=3
+PEV_HARD_ADX_DELTA=1.0
+PEV_HARD_ATR_MULT=0.90
+PEV_REQUIRE_EMA_SIDE=true
+PEV_REQUIRE_CLOSE_CONF=true
+# Extra knobs (runtime tuning)
+PEV_EXIT_IMMEDIATE=false
+PEV_WAIT_BARS=1
+PEV_USE_RECENT=true
+
 # ===== MA buffer controls (added) =====
 TS_MA_REQUIRE_15M=false
 TS_MA_BUFFER_PCT=0.0005
@@ -311,7 +344,7 @@ TS_MA_BUFFER_PCT=0.0005
 # =========================
 # Keep SL a real distance from current price (prevents near‑price whipsaws)
 SL_MIN_GAP_ATR_MULT=0.65
-SL_MIN_GAP_PCT=0.0020
+SL_MIN_GAP_PCT=0.0025
 
 # After TP1, never trail worse than breakeven (after fees)
 LOCK_NEVER_WORSE_THAN_BE=true
@@ -390,3 +423,23 @@ STAGE2_LOCK_USD=0.50
 
 #Debug
 TG_DEBUG_VALIDATORS=false
+
+# =========================
+# CHANGELOG - 2025-09-16 14:05 IST
+# =========================
+# - Added Regime (Chop vs Runner) knobs for TrendScalp:
+#   TS_REGIME_AUTO=true
+#   TS_ADX_UP=26.0 / TS_ADX_DN=23.0
+#   TS_ATR_UP=0.0040 / TS_ATR_DN=0.0035
+#   TS_PARTIAL_TP1=0.50
+#   TS_EXIT_ON_TP1=false
+#   PREPLACE_TP1_PARTIAL=false
+# - Objective: exit full at TP1 in CHOP; partial + trail in RUNNER; flatten on RUNNER→CHOP flip.
+# - Added Post-Entry Validity Guard (PEV) knobs (pre‑TP1 continuation check)
+#   PEV_* keys for grace/confirm/hard bands; aligns with regime thresholds.
+# =========================
+# CHANGELOG - 2025-09-16 20:35 IST
+# - Tightened entry direction to avoid wrong‑side fades after capitulation:
+#   TS_REQUIRE_BOTH=true, TS_EMA_FILTER=true, TS_OVERRIDE_EMA_RSI=false
+# - Added anti‑chase & RSI brakes: TS_AVOID_CHASE_ATR_BAR=1.2, TS_NO_SHORT_IF_RSI_LT=37, TS_NO_LONG_IF_RSI_GT=63
+#   Objective: prevent shorts into reclaim and longs into blow‑off; keep earlier entries safe with PEV.
