fixed ruff issues

--- a/.env
+++ b/.env
@@ -443,3 +443,37 @@ TG_DEBUG_VALIDATORS=false
 #   TS_REQUIRE_BOTH=true, TS_EMA_FILTER=true, TS_OVERRIDE_EMA_RSI=false
 # - Added anti‑chase & RSI brakes: TS_AVOID_CHASE_ATR_BAR=1.2, TS_NO_SHORT_IF_RSI_LT=37, TS_NO_LONG_IF_RSI_GT=63
 #   Objective: prevent shorts into reclaim and longs into blow‑off; keep earlier entries safe with PEV.
+# portfolio & risk
+PORTFOLIO_SYMBOLS=BTCUSD,ETHUSD,SOLUSD,PEPEUSD
+RISK_CAPITAL_PCT_PER_TRADE=0.10
+RISK_MAX_CONCURRENT_TRADES=2
+RISK_DAILY_STOP_PCT=0.25
+
+# ML gate (start OFF to confirm parity)
+TS_USE_ML_GATE=false
+TS_ML_CONF_THR=0.56
+TS_ML_WARMUP_BARS=600
+TS_ML_CONF_SIZING=false
+TS_ML_CONF_SLOPE=1.0
+
+# degrade-tighten (start OFF)
+TS_EXIT_DEGRADE_TIGHTEN=false
+TS_EXIT_DEGRADE_DELTA=0.15
+TS_EXIT_DEGRADE_BARS=3
+TS_EXIT_DEGRADE_ATR_MULT=0.50
+
+# dataset / ledger / scheduler
+DATASET_ROOT=datasets
+DATASET_RETENTION_DAYS=90
+LEDGER_BACKEND=duckdb
+LEDGER_PATH=ledger.duckdb
+RUN_TRAINER_NIGHTLY=true
+RUN_DATASET_AUTOLOADER=true
+
+# simulator
+SIMULATOR_START_CAPITAL=1000
+SIMULATOR_FEE_PCT=0.0005
+
+# timeframes (labels if needed)
+DELTA_TIMEFRAME_5M=5m
+DELTA_TIMEFRAME_1H=1h
