Integrate ML gate, risk gating, dataset autoloader, simulator

--- a/.env
+++ b/.env
@@ -450,10 +450,10 @@ RISK_MAX_CONCURRENT_TRADES=2
 RISK_DAILY_STOP_PCT=0.25
 
 # ML gate (start OFF to confirm parity)
-TS_USE_ML_GATE=false
+TS_USE_ML_GATE=true
 TS_ML_CONF_THR=0.56
 TS_ML_WARMUP_BARS=600
-TS_ML_CONF_SIZING=false
+TS_ML_CONF_SIZING=true
 TS_ML_CONF_SLOPE=1.0
 
 # degrade-tighten (start OFF)
